--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64"
   },
   "dependencies": {
+    "@types/file-saver": "^2.0.7",
     "blockly": "^11.2.0",
     "cross-env": "^7.0.3",
+    "file-saver": "^2.0.5",
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
