--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/file-saver": "^2.0.7",
     "blockly": "^11.2.0",
+    "bootstrap": "^5.3.3",
     "cross-env": "^7.0.3",
     "file-saver": "^2.0.5",
     "i18next": "^24.2.0",
@@ -27,8 +28,13 @@
     "i18next-xhr-backend": "^3.2.2",
     "react": "^18.3.1",
     "react-blockly": "^9.0.0",
+    "react-bootstrap": "^2.10.9",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.2.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5",
+    "reactstrap": "^9.2.3",
     "ssh2": "^1.16.0"
   },
   "devDependencies": {
