--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-i18next": "^15.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.5",
     "reactstrap": "^9.2.3",
     "ssh2": "^1.16.0"
   },
