--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,11 @@
 fastapi==0.104.1
-uvicorn==0.24.0
-paramiko==3.3.1
+uvicorn[standard]==0.24.0
 python-multipart==0.0.6
+paramiko==3.3.1
+opencv-python==4.8.1.78
 pydantic==2.4.2
+numpy==1.24.3
 cryptography==40.0.2
+tensorflow==2.12.0
+keras==2.12.0
+websockets==12.0
