--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@types/file-saver": "^2.0.7",
+    "@types/react-webcam": "^3.0.0",
     "blockly": "^11.2.0",
     "bootstrap": "^5.3.3",
     "cross-env": "^7.0.3",
@@ -36,6 +37,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.5",
+    "react-webcam": "^7.2.0",
     "reactstrap": "^9.2.3",
     "ssh2": "^1.16.0"
   },
