--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ dist-electron
 *.sln
 *.sw?
 
+client/.env
 # Raspberry Pi export files
 server/pi_predict/
 
@@ -31,3 +32,5 @@ server/pi_predict/
 server/best_model.h5
 
 ĐATN
+
+chat-ai-master
