--- a/client/package.json
+++ b/client/package.json
@@ -18,17 +18,21 @@
     "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "@types/file-saver": "^2.0.7",
     "@types/react-webcam": "^3.0.0",
     "@types/uuid": "^10.0.0",
     "blockly": "^11.2.0",
     "bootstrap": "^5.3.3",
     "cross-env": "^7.0.3",
+    "dompurify": "^3.2.5",
     "file-saver": "^2.0.5",
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
     "i18next-xhr-backend": "^3.2.2",
+    "marked": "^15.0.8",
     "react": "^18.3.1",
     "react-blockly": "^9.0.0",
     "react-bootstrap": "^2.10.9",
@@ -36,6 +40,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.2.0",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.5",
     "react-webcam": "^7.2.0",
